set(UI_EXTRA_FILES)
if (APPLE)
    set(UI_EXTRA_FILES macos_file_picker.mm)
endif()
add_library(uicommon OBJECT imgui_tables.cpp imgui_widgets.cpp imgui.cpp
                      imgui_sdl.cpp imgui_impl_sdl.cpp imgui_demo.cpp imgui_draw.cpp imgui_ui.cpp imgui_settings_window.cpp ${UI_EXTRA_FILES})
#target_link_libraries(uicommon hdd zip mo)
if (APPLE)
    target_link_libraries(uicommon "-framework AppKit")
endif()
target_compile_definitions(uicommon PUBLIC _FILE_OFFSET_BITS=64 _INCBIN_DIR="${CMAKE_CURRENT_SOURCE_DIR}")